--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,15 +13,15 @@
 @import './components/logo';
 @import './components/socials';
 @import './components/card';
+@import './components/features';
+@import './components/what-we-do';
+@import './components/our-team';
+@import './components/clients';
+@import './components/backdrop';
 
 // layout
 @import './layout/container-and-section';
 @import './layout/header';
 @import './layout/main';
-@import './layout/features';
-@import './layout/what-we-do';
-@import './layout/our-team';
-@import './layout/clients';
-
 @import './layout/footer';
-@import './layout/backdrop';
+
